--- a/site/style/style.css
+++ b/site/style/style.css
@@ -4,6 +4,7 @@
     --color-bg: rgba(19,20,23);
     --color-box: rgba(42,42,44);
     --color-footer: rgba(22,23,29);
+    --color-hover: rgb(90, 106, 198);
     
     /*text-color */
     --color-text: rgba(255,255,255);
@@ -37,6 +38,8 @@ body {
     /* text-color */
     --color-text: black;
     --color-text2: rgb(19, 19, 19);
+    /* hover */
+    --color-hover: rgb(83, 105, 228);
 }
 
 /* @Media Queries 400px */
