--- a/site/style/style.css
+++ b/site/style/style.css
@@ -5,6 +5,7 @@
     --color-box: rgba(42,42,44);
     --color-footer: rgba(22,23,29);
     --color-hover: rgb(90, 106, 198);
+    --color-purple: rgb(90, 46, 152);
     
     /*text-color */
     --color-text: rgba(255,255,255);
