--- a/site/style/main.css
+++ b/site/style/main.css
@@ -13,11 +13,18 @@
 .main .center .code-content{
     margin: 10px;
     padding: 20px;
-    height: 600px;
+    /* height: 600px; */
+    border-radius: 5px;
     background-color: var(--color-box);
     font-family: 'Roboto Mono', monospace;
 
 }
+.main .center .code-box{
+    margin: 10px;
+    background-color: aliceblue;
+}
+
+
 .main .right{
     width: 25%;
     height: 100%;
